layering and text wrap fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,7 +11,7 @@ body {
 	visibility: hidden;
 	position: absolute;
 	padding: 0.8rem;
-	max-width: 30em;
+	max-width: 28em;
 	color: white;
 }
 
